--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
 			outline: none;
         }
 
-        button {
+        #submit {
             align-self: center;
             margin-top: 50px;
             padding: 5px 10px;
@@ -121,7 +121,7 @@
                 <label for="checkbox">Have you ever lived with a Dog before?</label>
                 <input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
             </div>
-            <button id="submit" type="submit" value="Submit">Submit</button>
+            <input id="submit" type="submit" value="Submit">Submit</button>
         </form>
     </fieldset>
 
