--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
                 <label for="checkbox">Have you ever lived with a Dog before?</label>
                 <input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
             </div>
-            <input id="submit" type="submit" value="Submit">Submit</button>
+            <input id="submit" type="submit" value="Submit">
         </form>
     </fieldset>
 
